# speak-as-tolkien-tts

./: .gitignore  .pre-commit-config.yaml  README.MD  pyproject.toml
.github/workflows/: ci.yml  style_checks.yml
src/: constants.py
src/preprocessing/: conver_audio.py  segment_audio.py
